--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,6 +47,9 @@
 }
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
   /* * {
     @apply border-border;
   } */
